--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,15 @@
 <footer>
-    <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-x-twitter"></i>
-        </div>
-        <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
-        <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
-        </div>
+  <div class="f-info">
+    <div class="f-info-socials">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-x-twitter"></i>
     </div>
+    <div class="f-info-brand">Made with &#9829; by Ratnesh</div>
+    <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
+    <div class="f-info-links">
+      <a href="/listings">Privacy</a>
+      <a href="/listings">Terms</a>
+    </div>
+  </div>
 </footer>
