--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -124,7 +124,7 @@
       <div class="card col-11 mb-3 ms-3">
         <div class="card-body">
           <p class="card-title mt-2">
-            <b><em>@<%= review.author.username %></em></b>
+            <b><em><%= review.author.username %></em></b>
           </p>
           <p
             class="starability-result card-text"
