--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -18,8 +18,8 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"
-      ><i class="fa-regular fa-compass">&nbsp;Wanderlusts</i></a
-    >
+      ><i class="fa-regular fa-compass"></i
+    ></a>
     <button
       class="navbar-toggler"
       type="button"
